# commbot

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  package.xml
arduino/lights_flasher/: lights_flasher.ino
bag/: c_left.bag  c_right.bag
cfg/: Commbot.cfg
include/: Cue.hpp  LightsFlasher.hpp  Projector.hpp  Pulser.hpp
include/ros_helpers/: general.hpp  geometry.hpp  ros_helpers.h  visualization.hpp
launch/: commbot.launch  rviz_projector.launch  supervisor.launch
msg/: LightStates.msg
nodes/: commbot.cpp  lights_visualizer.cpp  supervisor.cpp
rviz/: projector.rviz
scripts/: cmd_vel_rosaria_to_commbot.py
yaml/: commbot.yaml  supervisor.yaml
